--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<? include "head.html" ?>
+<frameset rows="*,0" frameborder="0" framespacing="0"> 
+<frame name="head" src="head.html" noresize marginwidth="0" marginheight="0"> 
+</frameset> 
 <div id="sub_contents">
 			<div class="sub_two_wrap clearfix">
 				<div class="sub_title_box">
