--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<frameset rows="*,0" frameborder="0" framespacing="0"> 
+<frameset rows="100,*" frameborder="0" framespacing="0"> 
 <frame name="head" src="head.html" noresize marginwidth="0" marginheight="0"> 
 <frame name="main" src="main.html" noresize marginwidth="0" marginheight="0"> 
 </frameset> 
